--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-A little project where I write my own data structures.
+A little project where I write my own data structures. They are based loosely on
+the Java Collections Framework.
